# capstone-project

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  changes.diff  main.cpp
include/: Assert.hpp  Bindings.hpp  Camera.hpp  DFT.hpp  FFT.hpp  GPUSimulation.hpp  Globals.hpp  Image.hpp  Input.hpp  Mesh.hpp  Noise.hpp  Plane.hpp  Profiler.hpp  Program.hpp  ResourceManager.hpp  Shader.hpp  Simulation.hpp  Spectrum.hpp  Texture.hpp  TextureManager.hpp  Transformable.hpp
shaders/: ButterflyTexture.comp  CopyTexture.comp  DFT.comp  DebugNormals.frag  DebugNormals.geom  DebugNormals.vert  Gerstner.comp  IDFT.comp  IDFT_horizontal.comp  IDFT_vertical.comp  IFFT.comp  InitialSpectrum.comp  InvertAndPermute.comp  Ocean.frag  Ocean.vert  PhillipsSpectrum.comp  Random.comp  Sines.comp  TextureMerger.comp  TimeDependentSpectrum.comp  ocean_surface.frag  ocean_surface.vert  sine.comp
src/: CMakeLists.txt  Camera.cpp  DFT.cpp  FFT.cpp  GPUSimulation.cpp  Image.cpp  Input.cpp  Mesh.cpp  Noise.cpp  Plane.cpp  Profiler.cpp  Program.cpp  ResourceManager.cpp  Shader.cpp  Simulation.cpp  Spectrum.cpp  Texture.cpp  TextureManager.cpp  Transformable.cpp
test/: FindMinAndMax.comp  LayerToTexView.comp  NormalizeTexView.comp  indexes.comp  test.comp  test.cpp  test1.cpp  twiddle.comp
